<resources>
    <string name="app_name">quadflask</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="contextText_colorPicker">colorPicker</string>
    <string name="title_pickColor">Pick a color</string>
    <string name="text_lightness">Lightness</string>
    <string name="text_alpha">Alpha</string>
    <string name="your_color">Selected color:</string>
    <string name="text_submit">submit</string>
    <string name="text_cancel">cancel</string>
    <string name="text_color_is_reset">Default color is reset!</string>
    <string name="text_again_cap">Again</string>
    <string name="text_go_on_cap">Yep, my color</string>
</resources>